# CgTask

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: fragment_shader.cg  vertex_shader.cg
src/: CMakeLists.txt  cg_gl_error_checker.cpp  cg_gl_error_checker.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
